Bug 54744 - Hybrid PDF export are corrupted
Summary: Hybrid PDF export are corrupted
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
4.0.0.0.alpha0+ Master
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: Stephan Bergmann
URL:
Whiteboard: target:3.7.0
Keywords:
Depends on:
Blocks: mab4.0
  Show dependency treegraph
 
Reported: 2012-09-10 18:50 UTC by Arnaud Versini
Modified: 2012-09-28 10:59 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Arnaud Versini 2012-09-10 18:50:39 UTC
Steps to reproduce

Create a document (calc, writter) and export the document in Hybrid PDF way with LibreOffice Master
Open the file with LibreOffice (no version requirements for this)

Expected :
PDF file is about twice the ODF size
PDF opened like any OpenDocument files

Results :
PDF size is about ODF size
PDF won't open with LibO, file corrupted
Comment 1 Jean-Baptiste Faure 2012-09-12 20:37:43 UTC
Reproducible with master (Version 3.7.0.0.alpha0+ (Build ID: f49db87)) under Ubuntu 12.04 x86_64.
Comment 2 Julien Nabet 2012-09-16 11:56:32 UTC
On pc Debian x86-64 with master sources updated today, I reproduced the problem.
I noticed these logs during export:
warn:legacy.osl:19795:1:/home/julien/compile-libreoffice/libo/svl/source/items/custritm.cxx:117: CntUnencodedStringItem::PutValue(): Wrong type
warn:legacy.osl:19795:1:/home/julien/compile-libreoffice/libo/sfx2/source/appl/appuno.cxx:396: Property not convertable: FilterName
warn:legacy.osl:19795:1:/home/julien/compile-libreoffice/libo/sfx2/source/doc/docfile.cxx:2471: Unexpected Output stream parameter!

warn:legacy.osl:19795:1:/home/julien/compile-libreoffice/libo/sfx2/source/doc/docfile.cxx:1842: Illegal Output stream parameter!
Comment 3 Arnaud Versini 2012-09-16 16:17:11 UTC
Work with commit http://cgit.freedesktop.org/libreoffice/core/commit/?id=9c8dc01d3a40ec905c9d816c733ceb5d621e0426 , don't work with latest master
Comment 4 Julien Nabet 2012-09-16 16:32:31 UTC
(In reply to comment #3)
> Work with commit
> http://cgit.freedesktop.org/libreoffice/core/commit/?id=9c8dc01d3a40ec905c9d816c733ceb5d621e0426
> , don't work with latest master
How did you choose this specific commit http://cgit.freedesktop.org/libreoffice/core/commit/?id=9c8dc01d3a40ec905c9d816c733ceb5d621e0426 ?

Could it be possible you found one ok more recent?
Comment 5 Arnaud Versini 2012-09-16 17:34:26 UTC
I'm doing a bisect, so wait and see, probably ;-)

I choosed this one because it's about PDF, and a big merge of PDF source code, I'm not lucky
Comment 7 Not Assigned 2012-09-28 10:59:02 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=469780c715f2a5dee6c58347941aefe6f3de079f

fdo#54744: Fix broken logic of string comparison



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.