fdo#54744: Fix broken logic of string comparison

d1cc007108442056f50d3a6d1212b2b4cfdc4c14 "sal_Bool to bool, String to OUString,
in SfxMedium." changed

  !aLogicName.CompareToAscii( "private:stream", 14 ) == COMPARE_EQUAL     // (a)

where that suspicious ! made it effectively behave as

  aLogicName.CompareToAscii( "private:stream", 14 ) != COMPARE_EQUAL      // (b)

to

  (aLogicName.compareToAscii("private:stream", 14) == 0)                  // (c)

where (c) corresponds to (a), but the intended behavior was apparently (b):
Exporting to hybrid PDF now causes the embedded ODF stream (which is saved to a
private:stream URL) to be empty, as (c) is erroneously satisfied now, causing
the following lines to erroneously clear SID_OUTPUTSTREAM.

Change-Id: Ia2c1a69db7b4da07bfe01f52c3f6759301358a84